# Finshield-Fraud-Detection-Platform

./: Dockerfile  README.md  docker-compose.yml  makefile  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/monitoring/: monitor.py
apps/training/: train.py
configs/: base.yaml  features.yaml  model.yaml  models.yaml  rules.yaml
data/raw/: transactions_sample.csv
docs/: api.md  architecture.md  model-card.md  runbook.md
features/: batch_features.py  realtime_features.py
finshield_fraud_detection_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/: prediction_audit.jsonl
mlruns/504451210898756817/: meta.yaml
models/artifacts/: isolation_forest_model.joblib  logistic_regression_model.joblib  model_metadata.json  xgboost_model.joblib
pipelines/: data_validation.py  evaluation_pipeline.py  scoring_pipeline.py  training_pipeline.py
reports/: drift_report.json
src/common/: config.py  constants.py  logger.py  paths.py
src/data/: ingestion.py  schema.py  validation.py
src/models/: anomaly.py  anomaly_inference.py  evaluate.py  inference.py  preprocessing.py  train.py
src/monitoring/: audit.py  drift.py  model_registry.py
src/rules/: engine.py
src/scoring/: hybrid_engine.py  risk_engine.py
src/utils/: helpers.py
tests/api/: test_health.py
tests/integration/: test_ingestion.py
tests/unit/: test_anomaly_inference.py  test_batch_features.py  test_config.py  test_hybrid_engine.py  test_model_inference.py  test_model_training.py  test_monitoring.py  test_realtime_features.py  (+2 more)
(+158 files in other folders)
