[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finshield-fraud-detection-platform"
version = "0.7.0"
description = "Production-style fraud detection platform for fintech using Python, FastAPI, ML, and MLOps."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Thabang Rakeng" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.1",
  "xgboost>=2.1.1",
  "joblib>=1.4.2",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2",
  "great-expectations>=1.0.0",
  "pytest>=8.3.2",
  "httpx>=0.27.0",
  "mlflow>=2.16.2"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.2",
  "isort>=5.13.2",
  "mypy>=1.11.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "src*", "pipelines*", "features*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"